--- a/src/components/header/header.template.html
+++ b/src/components/header/header.template.html
@@ -1,5 +1,5 @@
-<img src="../../assets/img/logo.png" alt="logo" class="logo">
+<img src="../../assets/img/logo.png" alt="logo" class="header_logo">
 <div></div>
 <div>
-    <img src="../../assets/img/basket.png" alt="basket" class="basket">
+    <img src="../../assets/img/basket.png" alt="basket" class="header_basket">
 </div>
