--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -5,12 +5,12 @@ header {
     background: #181a1c;
 }
 
-.logo {
+.header_logo {
     width: 250px;
     height: 120px;
 }
 
-.basket {
+.header_basket {
     width: 50px;
     height: 50px;
 }
