ON-7: add PageNotFound (#6)
* ON-7: add PageNotFound

* исправила ошибку языка

--- a/src/pages/pageNotFound.style.css
+++ b/src/pages/pageNotFound.style.css
@@ -1,12 +1,12 @@
-footer {
-    height: 120px;
+body {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #181a1c;
 }
 
-.footer_text {
+.pageNotFound_text {
     color: #ff9800;
-    font-size: 15px;
+    font-size: 30px;
 }
