--- a/src/components/card/card.style.css
+++ b/src/components/card/card.style.css
@@ -1,9 +1,9 @@
 .card_item {
-    height: 400px;
+    position: relative;
+    height: 250px;
     width: 250px;
     border: solid 2px #ff9800;
     border-radius: 10px;
-    opacity: 0.8;
 }
 
 .card_item > h3 {
@@ -13,16 +13,8 @@
     font-size: 20px;
 }
 
-.card_description {
-    border: solid 2px #ff9800;
-    margin-bottom: 150px;
-    color: #ff9800;
-}
-
-.card_button {
-    text-align: center;
-}
-
-button {
-    cursor: pointer;
+.card_item > img {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.5;
 }
