--- a/src/components/card/card.style.css
+++ b/src/components/card/card.style.css
@@ -11,10 +11,14 @@
     text-align: center;
     color: #ff9800;
     font-size: 20px;
+    margin: 0;
 }
 
 .card_item > img {
     position: absolute;
     z-index: -1;
     opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
