--- a/src/components/card/card.style.css
+++ b/src/components/card/card.style.css
@@ -1,14 +1,24 @@
 .card_item {
-    height: 400px;
+    position: relative;
+    height: 250px;
     width: 250px;
     border: solid 2px #ff9800;
     border-radius: 10px;
 }
 
-h3 {
-    background: #1a1c1d 10%;
+.card_item > h3 {
+    background: #1a1c1d;
     text-align: center;
     color: #ff9800;
     font-size: 20px;
-    border-bottom: #ff9800 2px;
+    margin: 0;
+}
+
+.card_item > img {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
