--- a/src/components/card/card.style.css
+++ b/src/components/card/card.style.css
@@ -4,20 +4,28 @@
     width: 250px;
     border: solid 2px #ff9800;
     border-radius: 10px;
+    margin: 6px;
+    background: #352822;
+}
+
+.card_itemContent {
+    position: absolute;
+    top: 55px;
 }
 
 .card_item > h3 {
+    position: absolute;
+    top: 0;
+    width: 250px;
     background: #1a1c1d;
     text-align: center;
     color: #ff9800;
     font-size: 20px;
     margin: 0;
+    border-bottom: solid 2px #ff9800;
 }
 
 .card_item > img {
-    position: absolute;
-    z-index: -1;
-    opacity: 0.5;
     width: 100%;
     height: 100%;
     object-fit: cover;
