ON-16: add sliderCard and fix styles

--- a/src/components/listCard/listCard.style.css
+++ b/src/components/listCard/listCard.style.css
@@ -3,4 +3,7 @@
     justify-content: space-between;
     color: #b8ae66;
     margin: 3px;
+    height: 250px;
+    padding-top: 35px;
+    box-sizing: border-box;
 }
