--- a/src/components/card/card.style.css
+++ b/src/components/card/card.style.css
@@ -17,10 +17,12 @@
     font-size: 20px;
     margin: 0;
     border-bottom: solid 2px #ff9800;
+    border-radius: 10px 10px 0 0;
 }
 
 .card_item > img {
     width: 100%;
     height: 250px;
     object-fit: cover;
+    border-radius: 10px 10px 0 0;
 }
