--- a/src/components/card/card.style.css
+++ b/src/components/card/card.style.css
@@ -1,6 +1,5 @@
 .card_item {
     position: relative;
-    width: 250px;
     border: solid 2px #ff9800;
     border-radius: 10px;
     margin: 6px;
@@ -10,19 +9,13 @@
 .card_item > h3 {
     position: absolute;
     top: 0;
-    width: 250px;
-    background: #1a1c1d;
+    z-index: 1;
+    width: 100%;
+    background: #1a1c1dbf;
     text-align: center;
     color: #ff9800;
     font-size: 20px;
     margin: 0;
     border-bottom: solid 2px #ff9800;
-    border-radius: 10px 10px 0 0;
-}
-
-.card_item > img {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
