--- a/src/components/listCard/listCard.style.css
+++ b/src/components/listCard/listCard.style.css
@@ -1,6 +1,7 @@
 .options_wrap {
     box-sizing: border-box;
     height: 250px;
+    width: 250px;
     margin-top: 22px;
     overflow-y: scroll;
 }
