--- a/src/components/footer/footer.style.css
+++ b/src/components/footer/footer.style.css
@@ -4,6 +4,9 @@ footer {
     justify-content: center;
     align-items: center;
     background: #181a1c;
+    border-top: solid 2px #ff9800;
+    border-radius: 30px 30px 0 0;
+    margin-top: -25px;
 }
 
 .footer_text {
