--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -14,9 +14,11 @@ header {
 .header_logo {
     width: 250px;
     height: 120px;
+    cursor: pointer;
 }
 
 .header_basket {
     width: 50px;
     height: 50px;
+    cursor: pointer;
 }
