--- a/src/components/productInRow/productInRow.style.css
+++ b/src/components/productInRow/productInRow.style.css
@@ -37,7 +37,7 @@
     font-size: 14px;
 }
 
-.title_in_row {
+.productInRow__title {
     font-size: 16px;
     border-bottom: solid 1px #f6deb3;
     text-shadow: 5px 4px 10px #9a3535, 0 0 1em #9a3535;
