--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -22,11 +22,14 @@ header {
 .header_basket {
     width: 50px;
     height: 50px;
-    cursor: pointer;
 }
 
 .header_price {
     color: #f6deb3;
+}
+
+.header_cart {
+    cursor: pointer;
 }
 
 .header_numder {
