--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -9,6 +9,8 @@ header {
     z-index: 1;
     position: relative;
     padding: 10px 20px;
+    color: #ff9800;
+    font-size: 20px;
 }
 
 .header_logo {
@@ -20,5 +22,22 @@ header {
 .header_basket {
     width: 50px;
     height: 50px;
+}
+
+.header_price {
+    color: #f6deb3;
+}
+
+.header_cart {
     cursor: pointer;
+}
+
+.header_numder {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    border: solid 1px #ff9800;
+    background: #181a1c;
+    text-align: center;
+    position: absolute;
 }
