--- a/src/pages/cart/cart.style.css
+++ b/src/pages/cart/cart.style.css
@@ -10,6 +10,7 @@
     border: solid 1px #ff9800;
     border-radius: 10px;
     width: 700px;
+    height: fit-content;
 }
 
 .productsTitle {
@@ -27,10 +28,32 @@
     font-size: 23px;
 }
 
+.productsTitle_limit {
+    display: flex;
+    align-items: center;
+}
+
+.productsTitle_select {
+    border: solid 1px #ff9800;
+    border-radius: 10px;
+    margin-left: 5px;
+}
+
+.productsTitle_select > option {
+    height: 40px;
+    width: 30px;
+    font-size: 20px;
+    color: #d2b06f;
+    text-align: center;
+    background: #373636;
+    padding-top: 8px;
+    box-sizing: border-box;
+}
+
 .page {
     display: flex;
     justify-content: space-between;
-    width: 200px;
+    width: 220px;
     color: #f6deb3;
 }
 
@@ -43,8 +66,13 @@
     width: 20px;
 }
 
+.page_buttons > span {
+    font-size: 20px;
+    padding: 0 5px;
+}
+
 .content_wrap {
-    width:300px;
+    width: 300px;
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -58,7 +86,7 @@
 }
 
 .content_wrap > p > span {
-    color:#f6deb3;
+    color: #f6deb3;
 }
 
 .content_wrap > input {
@@ -80,5 +108,4 @@
     margin: 15px;
     background: #9a3535;
     color: #f6deb3;
-
 }
