--- a/src/components/productInRow/productInRow.style.css
+++ b/src/components/productInRow/productInRow.style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 700px;
+    width: 701px;
     height: 150px;
     border: solid 1px #ff9800;
     box-sizing: border-box;
@@ -35,6 +35,7 @@
     text-align: center;
     color: #f6deb3;
     font-size: 14px;
+    cursor: pointer;
 }
 
 .productInRow__title {
